# PASTA

./: .gitignore  README.md  compute_explanation.py  files.txt  pasta_score.py  pyproject.toml  requirements.txt  test_imgs.txt  train_net.py  train_pasta.py
data/: __init__.py  metadata_importer.py  pasta_dataset.py  pasta_dataset_importer.py
explanations/: __init__.py  ablationcam.py  bcos.py  clip_labo_sample.py  clip_linear_sample.py  clip_qda_sample.py  deepfeaturefactorization.py  eigencam.py  eigengradcam.py  explanation_method_importer.py  fullgrad.py  gradcam.py  gradcamelementwise.py  gradcamplusplus.py  guided_backprop.py  hirescam.py  lime_cbm.py  lime_image.py  rise.py  rise_image.py  saliency.py  scorecam.py  shap_cbm.py  shap_image.py  xgradcam.py  xnesyl_linear_sample.py
models/: __init__.py  cbm_supervised.py  clip_few_shot_probe.py  clip_labo.py  clip_linear.py  clip_qda.py  clip_zero_shot.py  model_importer.py  pasta.py  resnet.py  vit.py  xnesyl.py
utils/: __init__.py  evaluate.py  llava_embed.py  template.py  transforms.py  utils.py
