[project]
name = "dataset_xai"
version = "0.2.0"
authors = [
]
description = "XAI dataset in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
]
classifiers = [
]
dependencies = [
]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.extend-select = [
    "A",
    "ARG", 
    "B",
    "C4",
    "D",
    "ERA",
    "F",
    "G",
    "I",
    "ISC",
    "ICN",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "RSE",
    "S",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.ignore = [
    "ARG002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "B905",
    "D107",
    "D205",
    "D206",
    "ISC001",
    "N812",
    "RUF012",
    "S101",
    "TRY003",
    "S311",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "LLaVA",
    "check_results.py",
    "check_missing.py"
    
]

[tool.ruff.lint.pydocstyle]
convention = "google"
